--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Responsive Coffee Website</title>
 
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet"
+href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   
 </head>
 <body>
